Increase width of code box again on homepage to prevent scrollbar on default width

--- a/src/theme/assets/styles/welcome-critical.css
+++ b/src/theme/assets/styles/welcome-critical.css
@@ -32,7 +32,7 @@
 .welcome__example {
     display: block;
     margin: auto;
-    max-width: 760px;
+    max-width: 800px;
     margin-top: -160px;
 }
 
